[gd_scene load_steps=19 format=3 uid="uid://bmv357e2aofau"]

[ext_resource type="Script" uid="uid://drcypa7tweoq1" path="res://scripts/ui/upgrade/ability_card/ability_card.gd" id="1_n50ql"]
[ext_resource type="FontFile" uid="uid://ct63nvy5x11mp" path="res://assets/fonts/VonwaonBitmap-12px.ttf" id="3_cnvky"]
[ext_resource type="Texture2D" uid="uid://c4e5cnh8cmao1" path="res://icon.svg" id="5_ke8rt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kepfu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c5j8k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xntf4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4u2mk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qibba"]

[sub_resource type="Animation" id="Animation_cnvky"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_7cl8o"]
resource_name = "discard"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.498039), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_qd5dw"]
resource_name = "in"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.4),
"transitions": PackedFloat32Array(1, 2, 2),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.1, 1.1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.498039)]
}

[sub_resource type="Animation" id="Animation_6637f"]
resource_name = "selected"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 2),
"update": 0,
"values": [0.0, -0.174533, 0.0872665]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n50ql"]
_data = {
&"RESET": SubResource("Animation_cnvky"),
&"discard": SubResource("Animation_7cl8o"),
&"in": SubResource("Animation_qd5dw"),
&"selected": SubResource("Animation_6637f")
}

[sub_resource type="Animation" id="Animation_53xnm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_n50ql"]
resource_name = "swing"
length = 0.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [0.0, -0.00872665, 0.00872665]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_53xnm"]
_data = {
&"RESET": SubResource("Animation_53xnm"),
&"swing": SubResource("Animation_n50ql")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_55acg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kepfu"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 16

[node name="AbilityCard" type="Button"]
process_mode = 3
self_modulate = Color(1, 0.141176, 0.270588, 1)
custom_minimum_size = Vector2(60, 80)
offset_right = 60.0
offset_bottom = 80.0
pivot_offset = Vector2(30, 40)
theme_override_styles/focus = SubResource("StyleBoxEmpty_kepfu")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_c5j8k")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xntf4")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4u2mk")
theme_override_styles/normal = SubResource("StyleBoxEmpty_qibba")
script = ExtResource("1_n50ql")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_n50ql")
}

[node name="HoverAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_53xnm")
}

[node name="PanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
self_modulate = Color(1, 0.141176, 0.270588, 1)
material = SubResource("ShaderMaterial_55acg")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kepfu")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 2
alignment = 1

[node name="LevelLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cnvky")
theme_override_font_sizes/font_size = 12
text = "I"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AbilityNameLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cnvky")
theme_override_font_sizes/font_size = 12
text = "Health"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
texture = ExtResource("5_ke8rt")
expand_mode = 2
stretch_mode = 4
